# unitree

./: .gitignore  alembic.ini  dev-server.sh  nginx.conf  populate.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3b07894533a6_create_extension.py  5d750fd2953d_create_tree_table.py  74e7d487655d_create_tree_table.py  753d2cd35916_create_tree_table.py  8352a03a55b0_create_tree_table.py  84e8b921b6b3_create_tree_table.py  b1e9ebdec34e_create_tree_table.py  b7151ef32bd4_create_tree_table.py  beaa5c0343ba_create_tree_table.py  c1062113c6aa_create_tree_table.py  c298c1caf962_create_tree_table.py  d08043d09c51_create_tree_table.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  TreeView.tsx
frontend/src/PopulateDialog/: generateTree.ts  index.tsx
frontend/src/TreeView/: component.tsx  index.tsx  query.ts
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/misc/: ApiErrorCard.tsx  Centered.tsx  index.ts
frontend/src/shadcn/ui/: pagination.tsx  progress.tsx  select.tsx
frontend/src/treeview/: TreePaginated.tsx  TreeView.tsx  cursor.ts  index.ts
templates/: tree.html
unitree/: actions.py  app.py  cli.py  database.py  models.py  schema.py  settings.py
unitree/actions/: __init__.py  lexorank.py
