[tool.poetry]
name = "unitree"
version = "0.1.0"
description = ""
authors = ["snorkysnark <snorkysnark@gmail.com>"]
readme = "README.md"
packages = [{include = "unitree"}]
include =[{path = "static", format = ["sdist", "wheel"]}, {path = "alembic", format = ["sdist", "wheel"]}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
returns = "^0.22.0"
typer = "^0.12.3"


[tool.poetry.scripts]
unitree = "unitree.cli:main"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
